objects/ssot__SalesOrderDeliveryGroup__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContactPointAddressId__c</fullName>
        <label>Deliver to Address</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryInstructionsText__c</fullName>
        <label>Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DesiredDeliveryDate__c</fullName>
        <label>Desired Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GiftMessageText__c</fullName>
        <label>Gift Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrandTotalDeliveryAmount__c</fullName>
        <label>Grand Total Delivery Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Delivery Group Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGift__c</fullName>
        <label>Is Gift</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderDeliveryMethod__c</fullName>
        <label>Order Delivery Method</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalDeliveryGroupId__c</fullName>
        <label>Original Delivery Group</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromisedDate__c</fullName>
        <label>Promised Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderDeliveryGroupNumber__c</fullName>
        <label>Sales Order Delivery Group Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderDeliveryStatus__c</fullName>
        <label>Sales Order Delivery Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjustmentAmount__c</fullName>
        <label>Total Delivery Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjustmentTaxAmount__c</fullName>
        <label>Total Delivery Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryChargeAmount__c</fullName>
        <label>Total Delivery Charge Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryChargeTaxAmount__c</fullName>
        <label>Total Delivery Charge Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryTaxAmount__c</fullName>
        <label>Total Delivery Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPriceAmount__c</fullName>
        <label>Total Price Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductTaxAmount__c</fullName>
        <label>Total Product Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUnitPriceAmount__c</fullName>
        <label>Total Unit Price Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxAdjustmentAmount__c</fullName>
        <label>Total With Tax Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxDelivChargeAmount__c</fullName>
        <label>Total With Tax Delivery Charge Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217636_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderDeliveryGroup_OriginalDeli_rel</label>
        <referenceTo>ssot__SalesOrderDeliveryGroup__dlm</referenceTo>
        <relationshipLabel>SalesOrderDeliveryGroup_OriginalDeli_rel</relationshipLabel>
        <relationshipName>rel_1697761217636_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218704_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderDeliveryGroup_ContactPoint_rel</label>
        <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
        <relationshipLabel>SalesOrderDeliveryGroup_ContactPoint_rel</relationshipLabel>
        <relationshipName>rel_1697761218704_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218844_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderDeliveryGroup_SalesOrderId_rel</label>
        <referenceTo>ssot__SalesOrder__dlm</referenceTo>
        <relationshipLabel>SalesOrderDeliveryGroup_SalesOrderId_rel</relationshipLabel>
        <relationshipName>rel_1697761218844_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>